--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.secretstuff/
+secretstuff
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,windows,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,windows,macos
