--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "chess-image-generator": "^1.0.9",
     "chess.js": "^0.12.0",
+    "got": "^11.8.2",
     "nconf": "^0.11.3",
     "twitter": "^1.7.1"
   }
